{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 272,
  "lineage": "66ddac0f-679b-10ff-703f-07c719e1a063",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_mks_connect_demo_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397324722998:internet-gateway/igw-03a985e03d0f492f7",
            "id": "igw-03a985e03d0f492f7",
            "owner_id": "397324722998",
            "tags": {
              "Name": "main_gw"
            },
            "tags_all": {
              "Name": "main_gw"
            },
            "vpc_id": "vpc-05e1315caafda3d24"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "aws_mks_connect_demo_default_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03a985e03d0f492f7",
            "id": "r-rtb-00fba4f630332730d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00fba4f630332730d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws_mks_connect_demo_gateway",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_secrutiy_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397324722998:security-group/sg-01b644d9f88a02bf8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01b644d9f88a02bf8",
            "ingress": [],
            "name": "allowAlltraffic",
            "name_prefix": "",
            "owner_id": "397324722998",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_mks_connect_demo"
            },
            "tags_all": {
              "Name": "aws_mks_connect_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e1315caafda3d24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_vpc_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397324722998:subnet/subnet-0a2990f99f02212a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2990f99f02212a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "397324722998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_mks_connect_demo_subnet_public_2"
            },
            "tags_all": {
              "Name": "aws_mks_connect_demo_subnet_public_2"
            },
            "vpc_id": "vpc-05e1315caafda3d24"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_vpc_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397324722998:subnet/subnet-05d10d4d676859e63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d10d4d676859e63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "397324722998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_mks_connect_demo_subnet_public_1"
            },
            "tags_all": {
              "Name": "aws_mks_connect_demo_subnet_public_1"
            },
            "vpc_id": "vpc-05e1315caafda3d24"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397324722998:vpc/vpc-05e1315caafda3d24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ea9d9302e9c2afd",
            "default_route_table_id": "rtb-00fba4f630332730d",
            "default_security_group_id": "sg-024eb5c607434bc52",
            "dhcp_options_id": "dopt-08d3756ee52c0b703",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e1315caafda3d24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00fba4f630332730d",
            "owner_id": "397324722998",
            "tags": {
              "Name": "aws_mks_connect_demo_VPC"
            },
            "tags_all": {
              "Name": "aws_mks_connect_demo_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397324722998:security-group-rule/sgr-04ade99ac2c30b770",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04ade99ac2c30b770",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01b644d9f88a02bf8",
            "security_group_rule_id": "sgr-04ade99ac2c30b770",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_secrutiy_group",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_in_ipv4_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397324722998:security-group-rule/sgr-099e16db2f563f213",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-099e16db2f563f213",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01b644d9f88a02bf8",
            "security_group_rule_id": "sgr-099e16db2f563f213",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_secrutiy_group",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_in_ipv4_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397324722998:security-group-rule/sgr-0b9e24b8c68cfcc19",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b9e24b8c68cfcc19",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-001bae699b5ec486b",
            "security_group_rule_id": "sgr-0b9e24b8c68cfcc19",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.EKS_cluster_role_policy_attachment",
            "aws_iam_role_policy_attachment.EKS_cluster_role_policy_attachment2",
            "aws_subnet.eks_vpc_subnet_1",
            "aws_subnet.eks_vpc_subnet_2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    }
  ]
}